--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,5 +22,22 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
     - assets/fonts/
+    - assets/icons/
+    - assets/images/
+  
+  fonts:
+    - family: SourceSansPro
+      fonts:
+        - asset: assets/fonts/SourceSansPro/SourceSansPro-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/SourceSansPro/SourceSansPro-Bold.ttf
+          weight: 700
+    - family: Montserrat
+      fonts: 
+        - asset: assets/fonts/Montserrat/Montserrat-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Montserrat/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Montserrat/Montserrat-Bold.ttf
+          weight: 700
