--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   animated_splash_screen: ^1.1.0
   flutter_picker: ^2.0.1
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
