--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_picker: ^2.0.1
   provider: ^5.0.0
   http: ^0.13.3
+  flutter_map: ^0.13.1
+  latlong2: ^0.8.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
