--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   flutter_map: ^0.13.1
   latlong2: ^0.8.0
   location: ^4.3.0
+  url_launcher:
+  shared_preferences: ^2.0.5
+  image_picker: ^0.7.4
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
