--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^2.0.5
   image_picker: ^0.7.4
   flutter_masked_text: ^0.8.0
+  flutter_local_notifications: ^5.0.0+1
 
 dev_dependencies:
   flutter_test:
