--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   url_launcher:
   shared_preferences: ^2.0.5
   image_picker: ^0.7.4
-  flutter_masked_text: ^0.8.0
   flutter_local_notifications: ^5.0.0+1
+  extended_masked_text: ^2.2.1
 
 dev_dependencies:
   flutter_test:
