--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.0
+
+flutter_icons:
+  ios: true
+  image_path_ios: "assets/images/icon.png"
+  remove_alpha_ios: true
+
+  android: true
+  image_path_android: "assets/images/icon.png"
+  adaptive_icon_background: "assets/images/background.png"
+  adaptive_icon_foreground: "assets/images/foreground.png"
 
 flutter:
   uses-material-design: true
