--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     </queries>
     
    <application
-        android:label="topgo"
+        android:label="TopGo"
         android:icon="@mipmap/ic_launcher"
         android:requestLegacyExternalStorage="true">
         
