--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^0.7.4
   flutter_local_notifications: ^5.0.0+1
   extended_masked_text: ^2.2.1
+  permission_handler: ^8.1.6
 
 dev_dependencies:
   flutter_test:
