--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_local_notifications: ^8.2.0
   extended_masked_text: ^2.2.1
   permission_handler: ^8.1.6
+  background_fetch: ^1.0.1
 
 dev_dependencies:
   flutter_test:
